# cursed-rust-js

./: Cargo.toml  LICENSE  Makefile  coordinate_expanded.rs  index.html  main.js  style.css
pkg/: cursed_rust.d.ts  cursed_rust.js  cursed_rust_bg.js  cursed_rust_bg.wasm  cursed_rust_bg.wasm.d.ts
src/: jitter.rs  lib.rs  web_utils.rs
