[package]
name = "cursed-rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
lto = true
strip = true

[dependencies]
wasm-bindgen = "0.2.93"

[dependencies.web-sys]
version = "0.3.70"
features = ["console", "MouseEvent", "Window"]
